test/bad/generators/generic01.px

func f<T>(): T... def
    yield ""
    yield 0

f()
